fix: slight zoom-out on mobile hero image

--- a/css/memorial.css
+++ b/css/memorial.css
@@ -153,7 +153,10 @@
         margin-top: -25vh;
     }
 
-
+    .hero__bg {
+        background-size: 115% auto !important;
+        background-position: center 45% !important;
+    }
 
 
 
